# real-estate-prediction-bnelsonemail

./: .gitignore  README.md  pyproject.toml  requirements.txt
dashboard/: README.md  app.py
docs/01_architecture/: 00_technical_report_structure.md
docs/05_project_notes/: 00_phase_01.md
docs/05_project_notes/01_phase_1/: 00_load_data.md  01_regression_model.md
docs/05_project_notes/02_phase2/: 01_clustering_functions.md  02_cluster_analysis.md
notebooks/: 01_regression_modeling.ipynb  02_clustering_analysis.ipynb  03_recommendation_system.ipynb  04_save_models.ipynb
src/: clustering.py  data_loader.py  ensemble.py  recommendation.py  regression.py
technical_report/: README_quarto_pdf.md  _quarto.yml  report.qmd
technical_report/content/frontmatter/: 00_0_cover.qmd  00_1_structure_overview.qmd
technical_report/content/section_01/: 01_0_executive_summary.qmd  01_1_purpose_of_study.qmd  01_2_key_findings.qmd  01_3_recommendations.qmd
technical_report/content/section_02/: 02_0_introduction.qmd  02_1_background.qmd  02_2_definitions.qmd  02_3_objectives.qmd  02_4_scope.qmd  02_5_report_structure.qmd
technical_report/content/section_03/: 03_0_literature_review.qmd  03_1_industry_analysis.qmd  03_2_key_drivers.qmd  03_3_ml_approaches.qmd  03_4_gaps_justifications.qmd
technical_report/content/section_04/: 04_0_data_description.qmd  04_1_dataset_overview.qmd  04_2_feature_description.qmd  04_3_data_quality.qmd  04_4_data_preprocessing.qmd
technical_report/content/section_05/: 05_0_eda.qmd  05_1_univariate_analysis.qmd  05_2_bivariate_analysis.qmd  (+3 more)
(+24 files in other folders)
