[project]
name = "real_estate_prediction"
version = "0.1.0"
description = "Real estate prediction using Kaggle dataset"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "scikit-learn>=1.3.0",
    "scipy>=1.11.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "xgboost>=2.0.0",
    "lightgbm>=4.0.0",
    "statsmodels>=0.14.0",
    "streamlit>=1.28.0",
    "joblib>=1.3.0",
    "pytest>=7.4.0",
    "pytest-timeout>=2.2.0",
    "notebook>=7.0.0",
    "ipykernel>=6.25.0"
]

[project.optional-dependencies]
dev = [
    "pytest==8.0.2",
    "pytest-cov==4.1.0",
    "notebook==7.1.0",
    "ipykernel==6.29.2",
    "nbformat==5.9.2",
    "quarto>=0.1.0",
    "latex>=0.7.0",
    "beamer>=0.2.0",
    "pypdf==6.9.2",
    "pip",
]

[tool.hatch.build.targets.wheel]
packages = ["src/"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"